# gchromium

./: .gitignore  .gp.md  .swp  DEPS  README.md  diff.txt
.github/workflows/: build.yaml
base/: BUILD.gn
base/synchronization/: lock_impl.h  rlock.cc  rlock.h
chrome/: BUILD.gn
chrome/app/: chrome_main.cc
chrome/browser/: BUILD.gn
chrome/renderer/: BUILD.gn  chrome_content_renderer_client.h
components/embedder_support/: BUILD.gn  user_agent_utils.cc
components/fingerprinting/: BUILD.gn  README.md  fp_chromium.json  notes.md
components/fingerprinting/browser/: BUILD.gn  device_descriptor_loader.cc  device_descriptor_loader.h  manager_impl.cc  manager_impl.h
components/fingerprinting/common/: BUILD.gn  cache.h  device_descriptor.h  device_descriptor_impl.cc  device_descriptor_impl.h  fingerprint.h  fingerprint_impl.cc  fingerprint_impl.h  manager.cc  manager.h  store.h
components/fingerprinting/common/device_descriptor/: fingerprint.h  fingerprint_impl.cc  fingerprint_impl.h
components/fingerprinting/common/device_descriptor/mixins/: user-agent.h  webgl.h
components/fingerprinting/common/evasions/: hook.h  pack.h
components/fingerprinting/common/helper/: user_agent.cc  user_agent.h
components/fingerprinting/common/mixins/: user-agent.h  webgl.h
components/fingerprinting/common/mojom/: BUILD.gn  manager.mojom
components/fingerprinting/demo/: json.cc  v8.cc
components/fingerprinting/docs/: antidetect.md  dd.md
components/fingerprinting/renderer/: BUILD.gn  controller.h  store.h
components/fingerprinting/renderer/evasions/: README.md  hook.cc  hook.h  hook_data.h  hook_execution_context.cc  hook_execution_context.h  hook_factory.cc  hook_factory.h  hook_registry.h  pack.cc  pack.h  package_execution_context.cc  package_execution_context.h
components/fingerprinting/renderer/evasions/adapters/: v8.h
components/fingerprinting/renderer/evasions/execution_context/: README.md  hook.h  package.cc  package.h
components/fingerprinting/renderer/evasions/hooks/: fonts.h  fonts.js  navigator-battery-manager.h  navigator-media-devices.h  navigator-webdriver.h  navigator.h  navigator.js  navigator_platform.h  navigator_webdriver.h  utils.h  utils.js  webgl.h
components/fingerprinting/renderer/helper/: v8.cc  v8.h
content/browser/: BUILD.gn  browser_interface_binders.cc  browser_main_loop.cc
content/browser/renderer_host/: render_process_host_impl.h
content/renderer/: BUILD.gn  render_frame_impl.cc
content/renderer/fingerprinting/: patcher.cc  (+2 more)
fingerprinting/: BUILD.gn  README.md  dumpdd.js  export.h  fingerprint.h  fingerprint_impl.cc  fingerprint_impl.h  fp.json  fp_chrome.json  manager.cc  manager.h  manager.mojom  manager_impl.h  v8-utils.cc
fingerprinting/core/: BUILD.gn  cache.h  export.h  manager.cc  manager.h
fingerprinting/core/device_descriptor/: fingerprint.h  fingerprint_impl.cc  fingerprint_impl.h
fingerprinting/core/device_descriptor/mixins/: user-agent.h  webgl.h
fingerprinting/core/evasions/: BUILD.gn  hook.cc  hook.h  hook_data.h  hook_factory.cc  hook_factory.h  pack.cc  pack.h  packer.cc  packer.h
fingerprinting/core/evasions/hooks/: navigator_webdriver.h  webgl.cc  webgl.h  webgl.js
fingerprinting/demo/: json.cc  v8.bk.cc  v8.cc
fingerprinting/docs/: IPC.md  Targets.md  UserAgent.md  blink.md  glossary.md  gpt.md  injection.md  intel.md  js-to-v8.md  renderer.md  stacktraces.md  upstream-syncing-checklist.md  v8bind.md  workers.md
fingerprinting/docs/features/: multi-process_payload_passthrough.md
fingerprinting/docs/injection/: mojom.md
fingerprinting/docs/issues/: singleton.md
fingerprinting/docs/platform_hints/: traces.md
fingerprinting/docs/resources/: tcpip.md  webgl.md
fingerprinting/evasions/: BUILD.gn  evasion.h  export.h  hook.cc  hook.h  iface.cc  packer.cc  packer.h  userAgent.cc  utils.cc
fingerprinting/evasions/impl/: userAgent.cc
fingerprinting/manager/: manager.cc  manager.h  manager.mojom  manager_impl.cc  manager_impl.h
fingerprinting/mixins/: evasions.mojom.h  user-agent.h  user-agent.mojom.cc  user-agent.mojom.h
fingerprinting/public/cpp/: BUILD.gn  common.h  export.h  manager.cc  manager.h
fingerprinting/public/cpp/evasions/: BUILD.gn  hook.cc  hook.h  hook_execution_context.cc  pack.cc  pack.h  package_execution_context.cc  package_execution_context.h  runner.h
fingerprinting/public/cpp/mixins/: evasions.h  evasions.mojom.cc  evasions.mojom.h  user-agent.mojom.cc  user-agent.mojom.h
fingerprinting/public/evasions/: bbuiiildgn  hook_execution_context.cc  hook_execution_context.h  package_execution_context.cc  package_execution_context.h  v8.cc  v8.h
fingerprinting/public/mojom/: BUILD.gn  evasions.mojom  evasions_traits.cc  evasions_traits.h  manager.mojom
fingerprinting/utilities/: BUILD.gn  export.h  user_agent.cc  user_agent.h  v8.cc  v8.h
fingerprinting/utility/: BUILD.gn  export.h  user_agent.cc  user_agent.h  v8.cc  v8.h
ghost/: README.md  issue.txt
ghost/app/: ghost_main_delegate.cc  ghost_main_delegate.h
ghost/browser/: ghost_browser_main_loop.h  ghost_browser_process.h  ghost_content_browser_client.cc  ghost_content_browser_client.h  sources.gni
ghost/common/: ghost_content_client.h  renderer_configuration.mojom
ghost/docs/: cody-rendererproc.txt  cross_thread_resources.md  dom_wrapper_world.md  injection.md
ghost/renderer/: ghost_content_renderer_client.cc  ghost_content_renderer_client.h  ghost_render_frame_observer.cc  ghost_render_frame_observer.h  ghost_render_thread_observer.cc  ghost_render_thread_observer.h  sources.gni
net/base/: auth.h  proxy_server.cc  proxy_server.h  proxy_string_util.cc
net/http/: http_auth_cache.h  http_auth_controller.cc  http_auth_controller.h  http_network_transaction.cc  http_proxy_client_socket.cc  http_proxy_connect_job.cc  http_stream_factory_job_controller.cc
net/proxy_resolution/: configured_proxy_resolution_service.cc  configured_proxy_resolution_service.h  proxy_resolution_service.h
net/socket/: connect_job.cc  connect_job.h  connect_job_factory.cc
tools/debugging/: .lldbinit  launch.json
(+21 files in other folders)
