import("//build/config/chrome_build.gni")


group("fingerprinting") {
  visibility = [ "*" ]

  deps = [
      "//fingerprinting/utility",
      "//fingerprinting/public/cpp",
  ]

}



executable("demo") {
  visibility = [ "*" ]

  sources = [
    "demo/v8.cc",
  ]
  output_name = "v8_demo"  # The actual output binary name

  deps = [
      "//v8",
      "//fingerprinting/public/cpp:evasions",
  ]

}

executable("demo_json") {
  visibility = [ "*" ]

  sources = [
    "demo/json.cc",
  ]
  output_name = "json_demo"  # The actual output binary name

  deps = [
      "//fingerprinting/core:device_descriptor",
  ]

}
