import("//build/config/chrome_build.gni")
import("//mojo/public/tools/bindings/mojom.gni")


component("core") {
  sources = [
    "device_descriptor/fingerprint.h",
    "device_descriptor/fingerprint_impl.h",
    "device_descriptor/fingerprint_impl.cc",
    "evasions/hook.cc",
    "evasions/hook.h",
    # "evasions/hooks/webgl.cc",
    "evasions/pack.cc",
    "evasions/pack.h",
    "manager.h",
    "manager.cc",
    "export.h",
  ]

  visibility = [ "*" ]

  defines = [ "FINGERPRINTING_IMPLEMENTATION" ]


  deps = [
    "//base",
  ]

  public_deps = [
    "//third_party/abseil-cpp:absl",
  ]
}

