import("//build/config/chrome_build.gni")


source_set("core") {
  sources = [
    "device_descriptor/fingerprint.h",
    "device_descriptor/fingerprint_impl.h",
    "device_descriptor/fingerprint_impl.cc",
    "evasions/hook.cc",
    "evasions/hook.h",
    "evasions/hooks/webgl.h",
    "evasions/pack.cc",
    "evasions/pack.h",
    "manager.h",
    "manager.cc",
  ]

  visibility = [ "*" ]

  defines = [ "IS_FINGERPRINTING_CORE_IMPL" ]


  deps = [
    "//base",
  ]

  public_deps = [
    "//third_party/abseil-cpp:absl",
  ]
}

