import("//build/config/chrome_build.gni")

static_library("common") {
  sources = [
    "manager.h",
    "manager.cc",
    "fingerprint.h",
    "fingerprint_impl.h",
    "fingerprint_impl.cc",
    "store.h",
    "store.cc",
    "cache.h",
    "mixins/user-agent.h",
  ]

  # visibility = [ "//fingerprinting/*" ]

  deps = [
    "//base",
  ]

  public_deps = [
    "//third_party/abseil-cpp:absl",
    # ":device_descriptor",
    # ":evasions"
  ]
}





# static_library("renderer"){
#   sources = [
#     "evasions/hook.cc",
#     "evasions/hook.h",
#     "evasions/hooks/navigator_webdriver.h",
#     "evasions/hooks/webgl.h",
#     "evasions/hook_factory.cc",
#     "evasions/hook_factory.h",
#     "evasions/pack.cc",
#     "evasions/pack.h",
#   ]
#
#   visibility = [ "*" ]
#
#   deps = [
#     "//base",
#   ]
#
#   public_deps = [
#     "//third_party/abseil-cpp:absl",
#   ]
# }
