static_library("renderer") {
  # Make output library name something else
  output_name = "components_fingerprint_renderer"
  sources = [
    "evasions/execution_context/hook.h",
    "evasions/execution_context/hook.cc",
    "evasions/execution_context/package.h",
    "evasions/execution_context/package.cc",
    "evasions/hook.cc",
    "evasions/hook.h",
    "evasions/hooks/navigator_webdriver.h",
    "evasions/hooks/webgl.h",
    "evasions/hook_factory.cc",
    "evasions/hook_factory.h",
    "evasions/pack.cc",
    "evasions/pack.h",
  ]

  visibility = [ "*" ]

  public_deps = [
    "//base",
    "//v8",
  ]

}
