import("//build/config/chrome_build.gni")

shared_library("manager") {
  sources = [
    "mixins/user-agent.h",
    "mixins/user-agent.mojom.h",
    "mixins/user-agent.mojom.cc",
    "mixins/evasions.mojom.h",
    "mixins/evasions.mojom.cc",
    "manager.h",
    "manager.cc",
  ]

  visibility = [ "*" ]

  defines = [ "IS_FINGERPRINTING_MANAGER_IMPL" ]


  deps = [
    "//base",
    "//fingerprinting/core",
    "//fingerprinting/public/mojom",
    "//fingerprinting/utility:user_agent"
  ]

  public_deps = [
    "//third_party/abseil-cpp:absl",
  ]
}

