import("//build/config/chrome_build.gni")

shared_library("cpp") {
  sources = [
    "mixins/user-agent.h",
    "mixins/user-agent.mojom.h",
    "mixins/user-agent.mojom.cc",
    "mixins/evasions.mojom.h",
    "mixins/evasions.mojom.cc",
    "export.h",
    "manager.h",
    "manager.cc",
  ]

  visibility = [ "*" ]

  defines = [ "FINGERPRINTING_PUBLIC_IMPL" ]


  deps = [
    "//base",
    "//fingerprinting/utility:user_agent",
    "//fingerprinting/utility:v8",
    "//fingerprinting/core",
  ]

  public_deps = [
    "//third_party/abseil-cpp:absl",
    "//fingerprinting/public/mojom",
  ]
}


source_set("evasions") {
  sources = [
    "evasions/hook_execution_context.h",
    "evasions/hook_execution_context.cc",
    "evasions/package_execution_context.h",
    "evasions/package_execution_context.cc",
    "evasions/v8.h",
    "evasions/v8.cc",
  ]

  visibility = [ "*" ]

  defines = [ "IS_FINGERPRINTING_PUBLIC_EVASIONS_IMPL" ]

  public_deps = [
    "//base",
    "//fingerprinting/core",
    "//v8",
  ]

}


