import("//mojo/public/tools/bindings/mojom.gni")

mojom_component("mojom") {
  # disable_variants = true
  output_prefix = "fingerprinting_mojom"
  macro_prefix = "FINGERPRINTING_MOJOM"

  sources = [
    "manager.mojom",
  ]

  visibility = [ "*" ]
  deps = [
    "//mojo/public/mojom/base",
    "//third_party/blink/public/mojom:mojom_core",
    "//third_party/blink/public/mojom:mojom_modules",
    "//third_party/blink/public/mojom:mojom_platform",
  ]
}

